--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         project:
-          - VMelnalksnis.Sample
+          - VMelnalksnis.Testcontainers.Paperless
     
     runs-on: ubuntu-latest
 
