--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -9,6 +9,7 @@
 		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.4.0"/>
 		<PackageVersion Include="Nullable" Version="1.3.1"/>
 		<PackageVersion Include="System.Net.Http" Version="4.3.4"/>
+		<PackageVersion Include="System.Net.Http.Json" Version="7.0.0"/>
 		<PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1"/>
 		<PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.435"/>
 		<PackageVersion Include="Testcontainers" Version="2.2.0"/>
