--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/setup-dotnet@v3.0.3
 
       - id: publish
-        run: deployment/pack.sh "${{ matrix.project }}" "${{ github.run_number }}"
+        run: ./build/pack.sh "${{ matrix.project }}" "${{ github.run_number }}"
 
       - name: Upload package
         uses: actions/upload-artifact@v3.1.1
