ci: Separate versioning for each package

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ jobs:
     strategy:
       matrix:
         project:
+          - VMelnalksnis.Testcontainers.Keycloak
           - VMelnalksnis.Testcontainers.Paperless
     
     runs-on: ubuntu-latest
