ci: Version and create releases only based on tags

--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -10,7 +10,7 @@
 		<NoWarn>NETSDK1138</NoWarn>
 
 		<CoverletOutputFormat>opencover</CoverletOutputFormat>
-		<CoverletOutput>$(MSBuildThisFileDirectory)TestResults/$(AssemblyName)/$(TargetFramework)/</CoverletOutput>
+		<CoverletOutput>$(MSBuildThisFileDirectory)TestResults/$(MSBuildProjectName)/$(TargetFramework)/</CoverletOutput>
 	</PropertyGroup>
 
 	<ItemGroup>
