--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,8 @@
-name: Release
+name: Release Paperless
 
 on:
   push:
-    branches: [ master ]
     tags: [ v*.*.* ]
-    paths-ignore:
-      - '**.md'
 
 env:
   DOTNET_NOLOGO: true
@@ -13,44 +10,21 @@ env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
 
 jobs:
-  build-artifacts:
-    strategy:
-      matrix:
-        project:
-          - VMelnalksnis.Testcontainers.Keycloak
-          - VMelnalksnis.Testcontainers.Paperless
-    
+  release:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3.1.0
       - uses: actions/setup-dotnet@v3.0.3
-
       - id: publish
-        run: ./build/pack.sh "${{ matrix.project }}" "${{ github.run_number }}"
+        run: ./build/pack.sh "${{ github.ref_name }}" "${{ github.run_number }}"
 
-      - name: Upload package
-        uses: actions/upload-artifact@v3.1.1
-        with:
-          name: ${{ steps.publish.outputs.artifact-name }}
-          path: ${{ steps.publish.outputs.artifact }}
+      - name: NuGet Push
+        run: dotnet nuget push "**/*.nupkg" --api-key ${{ secrets.NUGET_KEY }} --source https://api.nuget.org/v3/index.json
+        working-directory: ${{ steps.publish.outputs.publish-directory }}
 
-      - name: Upload symbols
-        uses: actions/upload-artifact@v3.1.1
-        with:
-          name: ${{ steps.publish.outputs.symbols-name }}
-          path: ${{ steps.publish.outputs.symbols }}
-  
-  create-release:
-    name: Create release
-    needs: build-artifacts
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
-    steps:
-      - uses: actions/download-artifact@v3.0.1
-        id: download
-        with:
-          path: artifacts
+      - name: NuGet Push Symbols
+        run: dotnet nuget push "**/*.snupkg" --api-key ${{ secrets.NUGET_KEY }} --source https://api.nuget.org/v3/index.json
+        working-directory: ${{ steps.publish.outputs.publish-directory }}
 
       - name: Create release
         uses: softprops/action-gh-release@v0.1.14
@@ -61,12 +35,4 @@ jobs:
           generate_release_notes: true
           fail_on_unmatched_files: true
           files: |
-            ${{ steps.download.outputs.download-path }}/**/*.nupkg
-
-      - name: NuGet Push
-        run: dotnet nuget push "**/*.nupkg" --api-key ${{ secrets.NUGET_KEY }} --source https://api.nuget.org/v3/index.json
-        working-directory: ${{ steps.download.outputs.download-path }}
-
-      - name: NuGet Push Symbols
-        run: dotnet nuget push "**/*.snupkg" --api-key ${{ secrets.NUGET_KEY }} --source https://api.nuget.org/v3/index.json
-        working-directory: ${{ steps.download.outputs.download-path }}
+            ${{ steps.publish.outputs.publish-directory }}/**/*.nupkg
