build: Include README.md in packages

--- a/source/VMelnalksnis.Testcontainers.Paperless/VMelnalksnis.Testcontainers.Paperless.csproj
+++ b/source/VMelnalksnis.Testcontainers.Paperless/VMelnalksnis.Testcontainers.Paperless.csproj
@@ -24,4 +24,8 @@
 		<PackageReference Include="System.Net.Http.Json" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="\" />
+	</ItemGroup>
+
 </Project>
