--- a/source/VMelnalksnis.Testcontainers.Keycloak/VMelnalksnis.Testcontainers.Keycloak.csproj
+++ b/source/VMelnalksnis.Testcontainers.Keycloak/VMelnalksnis.Testcontainers.Keycloak.csproj
@@ -25,4 +25,8 @@
 		<PackageReference Include="System.Text.Encodings.Web" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="\" />
+	</ItemGroup>
+
 </Project>
