--- a/tests/VMelnalksnis.Testcontainers.Keycloak.Tests/VMelnalksnis.Testcontainers.Keycloak.Tests.csproj
+++ b/tests/VMelnalksnis.Testcontainers.Keycloak.Tests/VMelnalksnis.Testcontainers.Keycloak.Tests.csproj
@@ -1,6 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<ItemGroup>
+		<PackageReference Include="MartinCostello.Logging.XUnit" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+		<PackageReference Include="Microsoft.Extensions.Logging" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
+	</ItemGroup>
+	
+	<ItemGroup>
 		<ProjectReference Include="..\..\source\VMelnalksnis.Testcontainers.Keycloak\VMelnalksnis.Testcontainers.Keycloak.csproj" />
 	</ItemGroup>
 	
