--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -12,6 +12,7 @@
 		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="7.0.0"/>
 		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.4.0"/>
 		<PackageVersion Include="Nullable" Version="1.3.1"/>
+		<PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="6.25.0"/>
 		<PackageVersion Include="System.Net.Http" Version="4.3.4"/>
 		<PackageVersion Include="System.Net.Http.Json" Version="7.0.0"/>
 		<PackageVersion Include="System.Text.Encodings.Web" Version="7.0.0"/>
