--- a/tests/VMelnalksnis.Testcontainers.Keycloak.Tests/VMelnalksnis.Testcontainers.Keycloak.Tests.csproj
+++ b/tests/VMelnalksnis.Testcontainers.Keycloak.Tests/VMelnalksnis.Testcontainers.Keycloak.Tests.csproj
@@ -5,6 +5,7 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" />
 		<PackageReference Include="Microsoft.Extensions.Logging" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" />
 	</ItemGroup>
 	
 	<ItemGroup>
