--- a/source/VMelnalksnis.Testcontainers.Keycloak/VMelnalksnis.Testcontainers.Keycloak.csproj
+++ b/source/VMelnalksnis.Testcontainers.Keycloak/VMelnalksnis.Testcontainers.Keycloak.csproj
@@ -23,6 +23,7 @@
 	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
 		<!--Transitive dependency added directly to avoid using vulnerable versions-->
 		<PackageReference Include="System.Text.Encodings.Web" />
+		<PackageReference Include="System.Text.Json" />
 	</ItemGroup>
 
 	<ItemGroup>
