build(deps): bump NuGet dependencies/.NET SDK

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,12 +1,10 @@
 <Project>
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<DebugType>portable</DebugType>
-		<IsTrimmable>true</IsTrimmable>
-		<EnableTrimAnalyzer>true</EnableTrimAnalyzer>
 
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
@@ -20,6 +18,11 @@
 		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
 		<EnablePackageVersionOverride>false</EnablePackageVersionOverride>
 		<CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(TargetFramework)' != 'netstandard2.0'">
+		<IsTrimmable>true</IsTrimmable>
+		<EnableTrimAnalyzer>true</EnableTrimAnalyzer>
 	</PropertyGroup>
 
 	<ItemGroup>
