--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,26 +1,27 @@
 <Project>
 	<ItemGroup>
-		<PackageVersion Include="coverlet.msbuild" Version="6.0.0"/>
-		<PackageVersion Include="DotNet.ReproducibleBuilds" Version="1.1.1"/>
-		<PackageVersion Include="DotNet.ReproducibleBuilds.Isolated" Version="1.1.1"/>
-		<PackageVersion Include="FluentAssertions" Version="6.12.0"/>
+		<PackageVersion Include="coverlet.msbuild" Version="6.0.4"/>
+		<PackageVersion Include="DotNet.ReproducibleBuilds" Version="1.2.25"/>
+		<PackageVersion Include="DotNet.ReproducibleBuilds.Isolated" Version="1.2.25"/>
+		<PackageVersion Include="FluentAssertions" Version="7.0.0"/>
 		<PackageVersion Include="IsExternalInit" Version="1.0.3"/>
-		<PackageVersion Include="Jetbrains.Annotations" Version="2023.3.0"/>
-		<PackageVersion Include="MartinCostello.Logging.XUnit" Version="0.3.0"/>
-		<PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0"/>
-		<PackageVersion Include="Microsoft.Extensions.Logging" Version="8.0.0"/>
-		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0"/>
-		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+		<PackageVersion Include="Jetbrains.Annotations" Version="2024.3.0"/>
+		<PackageVersion Include="MartinCostello.Logging.XUnit" Version="0.6.0"/>
+		<PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6"/>
+		<PackageVersion Include="Microsoft.Extensions.Logging" Version="9.0.6"/>
+		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.6"/>
+		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0"/>
 		<PackageVersion Include="Nullable" Version="1.3.1"/>
-		<PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="7.3.1"/>
+		<PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1"/>
 		<PackageVersion Include="System.Net.Http" Version="4.3.4"/>
-		<PackageVersion Include="System.Net.Http.Json" Version="8.0.0"/>
-		<PackageVersion Include="System.Text.Encodings.Web" Version="8.0.0"/>
-		<PackageVersion Include="System.Text.Json" Version="8.0.2"/>
+		<PackageVersion Include="System.Net.Http.Json" Version="9.0.6"/>
+		<PackageVersion Include="System.Text.Encodings.Web" Version="9.0.6"/>
+		<PackageVersion Include="System.Text.Json" Version="9.0.6"/>
 		<PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1"/>
 		<PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.556"/>
-		<PackageVersion Include="Testcontainers" Version="3.7.0"/>
-		<PackageVersion Include="Testcontainers.Redis" Version="3.7.0"/>
+		<PackageVersion Include="Testcontainers" Version="4.6.0"/>
+		<PackageVersion Include="Testcontainers.Keycloak" Version="4.6.0"/>
+		<PackageVersion Include="Testcontainers.Redis" Version="4.6.0"/>
 		<PackageVersion Include="xunit" Version="2.6.6"/>
 		<PackageVersion Include="xunit.runner.visualstudio" Version="2.4.5"/>
 	</ItemGroup>
